# p4est

./: Makefile.am
.github/workflows/: ci.yml
doc/doxygen/: search.dox
example/: CMakeLists.txt
example/dune/: dune_interface2.c
example/search/: Makefile.am  search_partition2.c  search_partition3.c  search_replicated2.c
src/: Makefile.am  p4est.c  p4est.h  p4est_base.c  p4est_base.h  p4est_communication.c  p4est_communication.h  p4est_connectivity.h  p4est_dune.c  p4est_dune.h  p4est_iterate.h  p4est_lnodes.c  p4est_lnodes.h  p4est_to_p8est.h  p4est_wrap.h  p6est.h  p6est_lnodes.c  p6est_lnodes.h  p8est.h  p8est_communication.h  p8est_connectivity.h  p8est_dune.h  p8est_iterate.h  p8est_lnodes.h  p8est_wrap.h
